--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "start:mockDuo": "yarn build:dev --env.mockDuo && yarn start:dev-server",
     "start:playground": "concurrently \"grunt build:dev:watch\" \"grunt watch:sass\" \"yarn start:dev-server\" --kill-others",
     "start:playground:mockDuo": "concurrently \"grunt build:dev:watch --env.mockDuo\" \"grunt watch:sass\" \"yarn start:dev-server\" --kill-others",
-    "start:dev-server": "webpack-dev-server --config webpack.playground.config.js",
+    "start:dev-server": "webpack serve --config webpack.playground.config.js",
     "mock:device-authenticator": "dyson playground/mocks/spec-device-authenticator/ 6512"
   },
   "devDependencies": {
@@ -133,7 +133,7 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-safari-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.5",
+    "karma-webpack": "^5.0.0",
     "load-grunt-tasks": "^5.0.0",
     "node-sass": "^4.10.0",
     "nodemon": "^2.0.7",
@@ -151,12 +151,14 @@
     "stylelint-scss": "^3.9.2",
     "testcafe": "^1.4.0",
     "time-grunt": "^2.0.0",
+    "ts-loader": "^8.1.0",
     "typescript": "^4.2.2",
     "wait-on": "^3.3.0",
     "webdriver-manager": "^12.1.8",
-    "webpack": "^3.5.4",
+    "webpack": "^5.31.2",
     "webpack-bundle-analyzer": "^3.0.2",
-    "webpack-dev-server": "2.11.3"
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.10.1",
